[metadata]
name = pyclamp
version = 0.0.1
description = Electrophysiological package to perform Bayesian quantal analysis
long_description = file: README.md
url = https://github.com/Bhumbra/pyclamp
author = Bhumbra
author_email = g.bhumbra@ucl.ac.uk

[options]
packages = find:
include_package_data=True
install_requires =
  numpy
  scipy
  xlrd
  PyQt5
  PyOpenGL
  pyqtgraph
  joblib
  tqdm
  probayes>=0.0.3
