[metadata]
name = pyclamp
version = 0.0.2
description = Electrophysiological package to perform Bayesian quantal analysis
long_description = file: README.md
url = https://github.com/Bhumbra/pyclamp
author = Bhumbra
author_email = g.bhumbra@ucl.ac.uk

[options]
packages = find:
include_package_data=True
install_requires =
  numpy>=2.3.3
  scipy>=1.16.3
  joblib>=1.5.2
  tqdm>=4.67.1
  xlrd>=2.0.1
  PyQt6
  PyOpenGL
  pyqtgraph>=0.14.0
  probayes>=0.0.8
